# Riskcalc

./: README.md  pyproject.toml
fair_monte_carlo/distributions/: __init__.py  base.py  constant.py  lognormal.py  pert.py
fair_monte_carlo/models/: __init__.py  fair_model.py
fair_monte_carlo/reporting/: report.py
fair_monte_carlo/simulation/: __init__.py
instance/: fair_calculator.db
risk-calculator/: Makefile  README.md  _SWARP10_METADATA  authorizations.yml  docker-compose.yml  pyproject.toml  service-descriptor.yml
risk-calculator/examples/: basic_usage.py  coppa_regulatory_scenario.py  credential_theft_scenario.py  scenario.json  ugc_supply_chain_scenario.py
risk-calculator/fair_monte_carlo/: __init__.py  cli.py
risk-calculator/fair_monte_carlo/distributions/: __init__.py  poisson.py  triangular.py  uniform.py
risk-calculator/fair_monte_carlo/models/: fair_model.py  risk_scenario.py
risk-calculator/fair_monte_carlo/reporting/: __init__.py
risk-calculator/fair_monte_carlo/simulation/: monte_carlo.py  vulnerability.py
risk-calculator/src/: Dockerfile  requirements.txt
risk-calculator/templates/: component-tests.env  service.env
risk-calculator/tests/: README.md  __init__.py  test_distributions.py  test_fair_model.py  test_simulation.py
risk-calculator/webapp/: __init__.py  app.py  database.py  health.py
risk-calculator/webapp/static/css/: style.css
risk-calculator/webapp/static/js/: app.js
risk-calculator/webapp/views/: index.html
tests/: test_distributions.py  test_fair_model.py  test_simulation.py
webapp/: app.py  database.py  models.py  requirements.txt
webapp/instance/: fair_calculator.db
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
