[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-calculator"
version = "1.0.0"
description = "Open FAIR Monte Carlo Risk Calculator - GRC Service"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fair-calc = "fair_monte_carlo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_monte_carlo*", "webapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
